--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>info@homeorder.com</p>
+                            <p>bhanu@email.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
