--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="#menu" class="nav-link">Menu</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="#contact" class="nav-link">Contact</a>
+                <a href="admin.html" class="nav-link">Admin</a>
             </div>
             <div class="nav-cart">
                 <button class="cart-btn" onclick="toggleCart()">
