--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <span class="cart-count">0</span>
                 </button>
             </div>
+            <div class="nav-auth" id="navAuth">
+                <button class="auth-btn" onclick="goToLogin()">
+                    <i class="fas fa-sign-in-alt"></i>
+                    Login
+                </button>
+            </div>
             <div class="hamburger">
                 <span></span>
                 <span></span>
@@ -123,7 +129,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Address</h3>
-                            <p>123 Food Street, Cuisine City, CC 12345</p>
+                            <p>22968 copper reee terrece, VA</p>
                         </div>
                     </div>
                 </div>
